--- a/GridSearchHelper_way.ipynb
+++ b/GridSearchHelper_way.ipynb
@@ -222,12 +222,12 @@
        "             'ridge': [{'alpha': 0.01}],\n",
        "             'Stochastic_Descent': [{'alpha': 5e-05, 'penalty': 'l1'}],\n",
        "             'Decision_Tree': [{'max_features': 'log2',\n",
-       "               'min_samples_leaf': 3,\n",
-       "               'min_samples_split': 3}],\n",
+       "               'min_samples_leaf': 1,\n",
+       "               'min_samples_split': 5}],\n",
        "             'Random_Forest': [{'max_features': 'sqrt',\n",
        "               'min_samples_leaf': 3,\n",
-       "               'min_samples_split': 3,\n",
-       "               'n_estimators': 250}]})"
+       "               'min_samples_split': 4,\n",
+       "               'n_estimators': 100}]})"
       ]
      },
      "execution_count": 8,
@@ -246,12 +246,49 @@
     "This method returns a defaultdict with the best parameters for every model. You can either:\n",
     "* copy-paste them\n",
     "* access later by calling .best_params\n",
-    "* directly envoke fit_with_best() instead"
+    "* directly envoke the fit_with_best() method instead"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {'regression': [{}],\n",
+       "             'ridge': [{'alpha': 0.01}],\n",
+       "             'Stochastic_Descent': [{'alpha': 5e-05, 'penalty': 'l1'}],\n",
+       "             'Decision_Tree': [{'max_features': 'log2',\n",
+       "               'min_samples_leaf': 1,\n",
+       "               'min_samples_split': 5}],\n",
+       "             'Random_Forest': [{'max_features': 'sqrt',\n",
+       "               'min_samples_leaf': 3,\n",
+       "               'min_samples_split': 4,\n",
+       "               'n_estimators': 100}]})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "helper.best_params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Go to the manual to see what parameters .fit_with_best() supports. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -260,9 +297,7 @@
      "text": [
       "Fitting model regression with its best parameters\n",
       "Fitting model ridge with its best parameters\n",
-      "Fitting model Stochastic_Descent with its best parameters\n",
-      "Fitting model Decision_Tree with its best parameters\n",
-      "Fitting model Random_Forest with its best parameters\n"
+      "Fitting model Stochastic_Descent with its best parameters\n"
      ]
     },
     {
@@ -277,11 +312,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Fitting model Decision_Tree with its best parameters\n",
+      "Fitting model Random_Forest with its best parameters\n",
       "neg_root_mean_squared_error of the model regression with the best parameters is 3006.07\n",
       "neg_root_mean_squared_error of the model ridge with the best parameters is 3019.46\n",
-      "neg_root_mean_squared_error of the model Stochastic_Descent with the best parameters is 3959.83\n",
-      "neg_root_mean_squared_error of the model Decision_Tree with the best parameters is 7597.33\n",
-      "neg_root_mean_squared_error of the model Random_Forest with the best parameters is 3771.44\n"
+      "neg_root_mean_squared_error of the model Stochastic_Descent with the best parameters is 3959.01\n",
+      "neg_root_mean_squared_error of the model Decision_Tree with the best parameters is 8207.46\n",
+      "neg_root_mean_squared_error of the model Random_Forest with the best parameters is 3921.80\n"
      ]
     },
     {
@@ -289,12 +326,12 @@
       "text/plain": [
        "{'regression': 3006.0733911079724,\n",
        " 'ridge': 3019.4609723576123,\n",
-       " 'Stochastic_Descent': 3959.8291344139766,\n",
-       " 'Decision_Tree': 7597.3254129129145,\n",
-       " 'Random_Forest': 3771.4427324489006}"
+       " 'Stochastic_Descent': 3959.0053521007567,\n",
+       " 'Decision_Tree': 8207.458583583584,\n",
+       " 'Random_Forest': 3921.8047184114957}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,24 +341,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By default, the fit_with_best() method returns mean squared errors for every model. However, you can choose other metrics. \n",
+    "\n",
+    "The class provides access to a dictionary 'best_errors:'"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'EstimatorSelectionHelper' object has no attribute 'd_errors'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-61bc262d8741>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhelper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0md_errors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'EstimatorSelectionHelper' object has no attribute 'd_errors'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'regression': 3006.0733911079724,\n",
+       " 'ridge': 3019.4609723576123,\n",
+       " 'Stochastic_Descent': 3959.0053521007567,\n",
+       " 'Decision_Tree': 8207.458583583584,\n",
+       " 'Random_Forest': 3921.8047184114957}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "helper.d_errors()"
+    "helper.best_errors"
    ]
   }
  ],
