Additions to the primer

--- a/GridSearchHelper_way.ipynb
+++ b/GridSearchHelper_way.ipynb
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, the fit_with_best() method returns mean squared errors for every model. However, you can choose other metrics. \n",
+    "By default, the fit_with_best() method returns mean squared errors for every model. However, you can choose other metrics. As you can see, we get the same results as in the manual approach.\n",
     "\n",
     "The class provides access to a dictionary 'best_errors:'"
    ]
