--- a/GridSearchHelper_way.ipynb
+++ b/GridSearchHelper_way.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "(442,)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        " 'Random_Forest': RandomForestRegressor()}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "   'max_features': ['auto', 'sqrt', 'log2']}]}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -220,17 +220,17 @@
        "defaultdict(list,\n",
        "            {'regression': [{}],\n",
        "             'ridge': [{'alpha': 0.01}],\n",
-       "             'Stochastic_Descent': [{'alpha': 5e-05, 'penalty': 'l1'}],\n",
+       "             'Stochastic_Descent': [{'alpha': 0.0001, 'penalty': 'l1'}],\n",
        "             'Decision_Tree': [{'max_features': 'log2',\n",
-       "               'min_samples_leaf': 1,\n",
-       "               'min_samples_split': 5}],\n",
-       "             'Random_Forest': [{'max_features': 'sqrt',\n",
        "               'min_samples_leaf': 3,\n",
-       "               'min_samples_split': 4,\n",
-       "               'n_estimators': 100}]})"
+       "               'min_samples_split': 2}],\n",
+       "             'Random_Forest': [{'max_features': 'sqrt',\n",
+       "               'min_samples_leaf': 1,\n",
+       "               'min_samples_split': 2,\n",
+       "               'n_estimators': 150}]})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -260,17 +260,17 @@
        "defaultdict(list,\n",
        "            {'regression': [{}],\n",
        "             'ridge': [{'alpha': 0.01}],\n",
-       "             'Stochastic_Descent': [{'alpha': 5e-05, 'penalty': 'l1'}],\n",
+       "             'Stochastic_Descent': [{'alpha': 0.0001, 'penalty': 'l1'}],\n",
        "             'Decision_Tree': [{'max_features': 'log2',\n",
-       "               'min_samples_leaf': 1,\n",
-       "               'min_samples_split': 5}],\n",
-       "             'Random_Forest': [{'max_features': 'sqrt',\n",
        "               'min_samples_leaf': 3,\n",
-       "               'min_samples_split': 4,\n",
-       "               'n_estimators': 100}]})"
+       "               'min_samples_split': 2}],\n",
+       "             'Random_Forest': [{'max_features': 'sqrt',\n",
+       "               'min_samples_leaf': 1,\n",
+       "               'min_samples_split': 2,\n",
+       "               'n_estimators': 150}]})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,9 @@
      "text": [
       "Fitting model regression with its best parameters\n",
       "Fitting model ridge with its best parameters\n",
-      "Fitting model Stochastic_Descent with its best parameters\n"
+      "Fitting model Stochastic_Descent with its best parameters\n",
+      "Fitting model Decision_Tree with its best parameters\n",
+      "Fitting model Random_Forest with its best parameters\n"
      ]
     },
     {
@@ -312,13 +314,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting model Decision_Tree with its best parameters\n",
-      "Fitting model Random_Forest with its best parameters\n",
       "neg_root_mean_squared_error of the model regression with the best parameters is 3006.07\n",
       "neg_root_mean_squared_error of the model ridge with the best parameters is 3019.46\n",
-      "neg_root_mean_squared_error of the model Stochastic_Descent with the best parameters is 3959.01\n",
-      "neg_root_mean_squared_error of the model Decision_Tree with the best parameters is 8207.46\n",
-      "neg_root_mean_squared_error of the model Random_Forest with the best parameters is 3921.80\n"
+      "neg_root_mean_squared_error of the model Stochastic_Descent with the best parameters is 3959.30\n",
+      "neg_root_mean_squared_error of the model Decision_Tree with the best parameters is 5805.66\n",
+      "neg_root_mean_squared_error of the model Random_Forest with the best parameters is 3806.15\n"
      ]
     },
     {
@@ -326,12 +326,12 @@
       "text/plain": [
        "{'regression': 3006.0733911079724,\n",
        " 'ridge': 3019.4609723576123,\n",
-       " 'Stochastic_Descent': 3959.0053521007567,\n",
-       " 'Decision_Tree': 8207.458583583584,\n",
-       " 'Random_Forest': 3921.8047184114957}"
+       " 'Stochastic_Descent': 3959.304029138523,\n",
+       " 'Decision_Tree': 5805.657755255256,\n",
+       " 'Random_Forest': 3806.1525385385385}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -359,12 +359,12 @@
       "text/plain": [
        "{'regression': 3006.0733911079724,\n",
        " 'ridge': 3019.4609723576123,\n",
-       " 'Stochastic_Descent': 3959.0053521007567,\n",
-       " 'Decision_Tree': 8207.458583583584,\n",
-       " 'Random_Forest': 3921.8047184114957}"
+       " 'Stochastic_Descent': 3959.304029138523,\n",
+       " 'Decision_Tree': 5805.657755255256,\n",
+       " 'Random_Forest': 3806.1525385385385}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
