--- a/GridSearchHelper_way.ipynb
+++ b/GridSearchHelper_way.ipynb
@@ -10,13 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from collections import defaultdict\n",
-    "# import matplotlib\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import scipy.stats as st\n",
-    "# from scipy.stats import norm\n",
-    "# import seaborn as sns\n",
     "import datetime\n",
-    "# import pandas_profiling\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, power_transform\n",
     "from sklearn.linear_model import LinearRegression, Ridge, SGDRegressor\n",
@@ -24,10 +18,7 @@
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score, explained_variance_score, median_absolute_error\n",
-    "# from sklearn.compose import TransformedTargetRegressor\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "# from sklearn.pipeline import Pipeline, FeatureUnion\n",
-    "from sklearn.model_selection import KFold, StratifiedKFold"
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
